--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,23 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/8.2.10/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
          https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAwcjT4bJWejm3qG9Aj3GBvPYcwdkgRZ3E",
+        authDomain: "qoute-ccedf.firebaseapp.com",
+        projectId: "qoute-ccedf",
+        storageBucket: "qoute-ccedf.appspot.com",
+        messagingSenderId: "376930725616",
+        appId: "1:376930725616:web:e5046000e9168e7df39c35"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   </body>
 </html>
